Tue May 01 21:00:26 BST 2007  Olly Betts <olly@survex.com>

	* api/omtermlistiterator.cc,api/omvalueiterator.cc,
	  backends/multi/multi_alltermslist.cc: Add explicit
	  `#include "omassert.h"'.
	* backends/multi/multi_alltermslist.cc: Remove all explicit
	  std:: qualifiers and add `using namespace std;'.

Tue May 01 20:56:10 BST 2007  Olly Betts <olly@survex.com>

	* common/multialltermslist.h: Add explicit std:: qualifiers for
	  string, for consistency with std::vector in this header.

Tue May 01 15:19:53 BST 2007  Olly Betts <olly@survex.com>

	* matcher/branchpostlist.h: Don't check for NULL pointer before
	  calling delete.

Tue May 01 02:29:10 BST 2007  Olly Betts <olly@survex.com>

	* common/document.h,common/documentterm.h,common/multialltermslist.h,
	  matcher/rset.cc,queryparser/queryparser.cc: Add some explicit
	  includes for headers which were previously only implicitly included
	  (in preparation for a forthcoming change which removes some of the
	  implicit inclusions).

Tue May 01 01:20:53 BST 2007  Olly Betts <olly@survex.com>

	* backends/database.cc,bin/quartzcheck.cc,docs/deprecation.rst,
	  include/xapian/dbfactory.h,tests/api_db.cc,
	  tests/harness/backendmanager.cc,tests/quartztest.cc: Deprecate
	  the Quartz backend and related functions and utilities.

Fri Apr 27 12:56:13 BST 2007  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Pass '-no-install' when linking test programs,
	  since we don't ever install them.  This means libtool doesn't need
	  to generate shell script wrappers on most platforms.  Also prefer
	  '$(ldflags)' to '@ldflags' as the former allows the user to override
	  when they run 'make' which is sometimes useful.

Fri Apr 27 03:44:15 BST 2007  Olly Betts <olly@survex.com>

	* docs/intro_ir.html: Add links for the various researchers mentioned
	  by name.

Thu Apr 26 17:57:10 BST 2007  Olly Betts <olly@survex.com>

	* docs/bm25.html,docs/intro_ir.html: Assorted documentation
	  improvements.
